# post

./: .gitignore  README.md  main.py  pyproject.toml
config/: .env.example  settings.py
scripts/: daily_post.py  weekly_post.py
src/: __init__.py
src/collectors/: __init__.py  base.py  github_collector.py  matrix_collector.py  mwmbl_stats_collector.py
src/processors/: __init__.py  ai_summarizer.py  content_filter.py  content_formatter.py
src/publishers/: __init__.py  base.py  blog_publisher.py  mastodon_publisher.py  x_publisher.py
src/scheduler/: __init__.py  task_scheduler.py
src/storage/: __init__.py  database.py  models.py
